fix(ui): Fix layout shift
Force vertical scrollbar to always show on HTML with to prevent layout
elements from shifting when content overflows and the
scrollbar appears.

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 .listing {
     height: 270px;
 }
